--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="vn.dmcl.eagleeyes">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -11,32 +12,37 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-
-    <application android:name=".view.BaseApplication"
+    <application
+        android:name=".view.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:fullBackupContent="@xml/backup_descriptor">
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDmkVfrls1-WxTyh0yRx88CPdMlKEe1Hbc" />
-        <activity android:name=".view.Map.MainMapActivity"
-            android:launchMode="singleTask">
-        </activity>
-        <activity android:name=".view.Login.LoginActivity"
-            android:theme="@style/AppTheme_NoActionBar">
+
+        <activity
+            android:name=".view.map.MainMapActivity" />
+
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:theme="@style/AppTheme_FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".service.LocationService" />
 
+        <service android:name=".service.LocationService" />
     </application>
 
 </manifest>
