--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:authorities="com.example.asd.fileprovider"
         android:fullBackupContent="@xml/backup_descriptor">
         <meta-data
             android:name="com.google.android.gms.version"
