--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".service.LocationService" />
+        <service android:name=".data.service.LocationService" />
     </application>
 
 </manifest>
