--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyDmkVfrls1-WxTyh0yRx88CPdMlKEe1Hbc" />
 
-        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" />
+        <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="true" />
 
         <activity
             android:name=".view.map.MainMapActivity"
